switch to repository pattern and add custom data access method